-------------------------------------------------------------------------------
0.3.0rc1 by the ShyPike
-------------------------------------------------------------------------------
added:   Drop-down box for choosing the web-gui
         restructured the templates, they reside in <sabdir>/interfaces
fixed:   Default 'dirscan_dir' is now empty (inactive)
changed: 'complete_dir' and 'download_dir' are now both in $HOME/downloads
added:   Friendly fatal error reports through the web browser
fixed:   Restored compatibility with yahoo-rss-feeds
fixed:   Fixed memory problem for highspeed-download/slow-disk combination
added:   newzbin queue (for 5/min limitation)
added:   Help links to wiki pages on Sourceforge.net
added:   RSS-feed for History
fixed:   Restored compatibility with TV-NZB RSS-feeds.
added:   Linux/OSX only.
         Replace "umask" with "permissions". SABnbzd now sets file permissions
         first to private (u=rwx, g=, o=).
         When the download is completed and before user post-processing,
         SAB chmod-s all files with the specified pattern (e.g. "o=rx, g=rx").
         Files that have no "u=x" will get no "g=x" or "o=x" bits!
added:   Timeout parameter per server (seconds, minimum=30, default=120)
added:   Email notifications (end of job and disk-full)
         Supports secured email (TLS) for use with gmail.com
added:   Set minimum diskspace (in MB) for the download directory
         When diskspace is below threshhold, SABnzbd will pause.
         You must free diskspace and then resume SABnzbd manually.
added:   Auto-launch of browser (starting the web-gui)
added:   Better handling of INI file
         You can start without an INI and get usable defaults
         Default storage in localdata/appdata/sabnzbd for Windows
         Default storage in ~/.sabnzbd for Linux/OSX
         Auto creation of directories
added:   Commandline switches
         -Regulate logging level (default is errors/warning only)