@@ -127,7 +127,7 @@ Slowdown factor, try values between 0.01 and 1.0.<br>
 <br>
 <strong>Article Cache Limit:</strong><br>
 Cache articles in memory.<br>
-<input type="text" name="cache_limit" value=$cache_limit>
+<input type="text" name="cache_limitstr" value=$cache_limitstr>
 <br>
 <br>
 <strong>Cleanup List:</strong><br>
