@@ -58,7 +58,7 @@
     <br>
     <br>
     <strong>Minimum free space for Download Directory:</strong><br>
-    Auto-pause when free space is beneath this value (MB).<br>
+    Auto-pause when free space is beneath this value.<br>
     <input type="text" name="download_free" value="$download_free">
     <br>
     <br>
